--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,82 +1,101 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:background="#ddd"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:cardCornerRadius="6dp"
-        >
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize">
 
-        <TableLayout
+
+
+    </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_below="@id/toolbar_main"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.CardView
+            android:layout_below="@id/toolbar_main"
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
 
-            <TableRow
-                android:padding="10dp"
-                android:background="#e0e0e0">
+            app:cardCornerRadius="6dp"
+            >
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/profile_image"
-                    android:layout_width="96dp"
-                    android:layout_height="96dp"
-                    android:src="@drawable/ic_anonimo"
-                    app:border_width="2dp"
-                    app:border_color="#FFF"
-                />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="20dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        android:text="Leonardo Cordeiro" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="15dp"
-                        android:text="Uma hora atrás" />
-
-                </LinearLayout>
-            </TableRow>
-            <TextView
-                android:padding="15dp"
-                android:textSize="16sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultrices egestas tellus sit amet vestibulum. Proin aliquam mollis lacus tempor mattis. Ut fringilla nisi non diam facilisis, quis porta dolor cursus. Cras pretium porta purus vitae euismod."
-                />
-            <RelativeLayout
+            <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#e0e0e0"
-                android:paddingLeft="6dp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/curtir"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_curtir"
-                />
+                <TableRow
+                    android:padding="10dp"
+                    android:background="#e0e0e0">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/profile_image"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:src="@drawable/ic_anonimo"
+                        app:border_width="2dp"
+                        app:border_color="#FFF"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="20dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:textColor="#727272"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:text="Leonardo Cordeiro" />
+
+                        <TextView
+                            android:textColor="#B6B6B6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="15dp"
+                            android:text="Uma hora atrás" />
+
+                    </LinearLayout>
+                </TableRow>
                 <TextView
+                    android:padding="15dp"
+                    android:textSize="16sp"
+                    android:textColor="#212121"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultrices egestas tellus sit amet vestibulum. Proin aliquam mollis lacus tempor mattis. Ut fringilla nisi non diam facilisis, quis porta dolor cursus. Cras pretium porta purus vitae euismod."
+                    />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#e0e0e0"
+                    android:paddingLeft="6dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/curtir"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ic_curtir"
+                        />
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="6sp"
@@ -85,12 +104,17 @@
                         android:textColor="#5c6bc0"
                         android:layout_toRightOf="@id/curtir"
                         android:text="Curtir (10 curtiram isso)"
-                />
+                        />
 
 
-            </RelativeLayout>
-        </TableLayout>
+                </RelativeLayout>
+            </TableLayout>
 
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+    <include
+        android:id="@+id/inc_toolbar_bottom"
+        layout="@layout/toolbar_bottom" />
 
-</LinearLayout>
+
+</RelativeLayout>
